--- a/app/src/main/res/layout/fragment_detail_recycler_view_interest_item.xml
+++ b/app/src/main/res/layout/fragment_detail_recycler_view_interest_item.xml
@@ -1,4 +1,4 @@
-<RelativeLayout android:layout_width="match_parent"
+<RelativeLayout android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:padding="16dp">
