--- a/app/src/main/res/layout/main_activity_nav_header.xml
+++ b/app/src/main/res/layout/main_activity_nav_header.xml
@@ -10,53 +10,17 @@
     android:orientation="vertical">
 
     <ImageView
-        android:layout_width="70dp"
-        android:layout_height="70dp"
-        android:src="@drawable/house_white"
-        android:layout_weight="2"
-        android:layout_marginTop="30dp"
+        android:layout_width="90dp"
+        android:layout_height="90dp"
+        android:src="@drawable/home"
         android:tint="@android:color/white"/>
 
-    <LinearLayout
-        android:layout_width="match_parent"
+    <TextView
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_weight="1">
-
-        <ImageView
-            android:id="@+id/profile_picture"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:layout_marginLeft="20dp"
-            android:layout_marginBottom="20dp"
-            android:layout_marginRight="20dp"
-            android:layout_marginTop="0dp"
-            android:src="@drawable/user"/>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical">
-
-            <TextView
-                android:id="@+id/user_name"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="NAME HERE"
-                android:textStyle="bold"
-                android:layout_marginTop="8dp"
-                android:textColor="@android:color/white"/>
-            <TextView
-                android:id="@+id/user_mail"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="mail here"
-                android:textStyle="italic"
-                android:textSize="9sp"
-                android:textColor="@android:color/white"/>
-
-        </LinearLayout>
-
-    </LinearLayout>
+        android:text="Real Estate Manager"
+        android:layout_marginTop="30dp"
+        android:textSize="20sp"
+        android:textColor="@android:color/white"/>
 
 </LinearLayout>
