--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -8,7 +8,7 @@
     android:fitsSystemWindows="true"
     >
 
-    <TextView
+    <!--<TextView
         android:id="@+id/text_view_detail_fragment_no_item_selected"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -18,7 +18,7 @@
         android:elevation="5dp"
         android:layout_gravity="center"
         android:gravity="center"
-        android:visibility="gone"/>
+        android:visibility="gone"/>-->
 
     <com.google.android.material.appbar.AppBarLayout
         android:id="@+id/main.appbar"
