--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -14,4 +14,5 @@
     <color name="green">#1aa149</color>
     <color name="red">#cf002d</color>
     <color name="white">#ffffff</color>
+    <color name="lightBlue">#e7e0ff</color>
 </resources>
