--- a/app/src/main/res/layout/activity_add_form.xml
+++ b/app/src/main/res/layout/activity_add_form.xml
@@ -34,7 +34,7 @@
                 android:layout_height="45dp"
                 android:layout_marginRight="7dp"
                 android:layout_weight="50"
-                android:backgroundTint="@color/purpleAccent"
+                android:backgroundTint="@color/blue_grey_dark"
                 android:text="Type of place"
                 android:textSize="12sp"
                 android:textAllCaps="false"
@@ -48,7 +48,7 @@
                 android:layout_marginLeft="7dp"
                 android:layout_weight="50"
                 android:textSize="12sp"
-                android:backgroundTint="@color/purpleAccent"
+                android:backgroundTint="@color/blue_grey_dark"
                 android:text="Add pictures"
                 android:textAllCaps="false"
                 app:icon="@drawable/picture" />
